# UNO

./: .gitignore  README.md  package-lock.json  pyproject.toml
uno/: __main__.py  app.py  card.py  deck.py  game.py  new_deck.py  new_game.py  player.py
uno/card_types/: color.py  number.py  special.py  wild.py
uno/deck/: card.py  deck.py
uno/deck/card_types/: number.py  special.py
uno/tests/: test_deck.py  test_game.py
uno/ui/: ui.py  uno_frame.py
